@@ -1,7 +1,8 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
- * 11Mar2019 Fixes bug in MPI_Wait where the input request is not copied for later processing
+ * 12Jun2019 Guards the definition of SaveMessage and ProcessMessage only under MPI3
+ * 11Jun2019 Fixes bug in MPI_Wait where the input request is not copied for later processing
  * 25Apr2019 Fixes race conditions between thread creations and PEBS samples 
  * 17Apr2019 Fixes bug in pebs sampling store misses identification
  * 02Apr2019 Adds support for changing num_threads in OpenMP parallel constructs
